test/sema/mutable-parameter-type.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

// CHECK: [[@LINE+1]]:9: error: parameter types cannot be 'mutable'
def foo(i: mutable int) { }
